Validation共通化対応

--- a/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
@@ -106,7 +106,7 @@
                 <div class="col-md-10 col-xs-11">
 	                  <span class="text-info h3">###ADMIN###</span>
                 </div>
-                <input type="hidden" name="ADMIN_VAL" value="###ADMIN_VAL###" />
+                <input type="hidden" name="ADMIN" value="###ADMIN_VAL###" />
             </div>
 	          <br />
             <div class="row">
