Validation共通化対応

--- a/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
@@ -25,7 +25,8 @@
 			      <input type="hidden" name="REST" value="PUT" />
 			      <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
 			      <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
-            <!---->
+            
+            <!--FAMILY_NAME-->
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -39,6 +40,8 @@
 	            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME###" />
             </div>
 	          <br />
+
+            <!--GIVEN_NAME-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -51,6 +54,8 @@
                 <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME###" />
             </div>
 	          <br />
+
+            <!--EMAIL-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -63,6 +68,8 @@
                 <input type="hidden" name="EMAIL" value="###EMAIL###" />
             </div>
 	          <br />
+
+            <!--TEL1-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -75,6 +82,8 @@
                 <input type="hidden" name="TEL1" value="###TEL1###" />
             </div>
 	          <br />
+
+            <!--TEL2-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -87,6 +96,8 @@
                 <input type="hidden" name="TEL2" value="###TEL2###" />
             </div>
 	          <br />
+
+            <!--PASSWORD-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -99,6 +110,8 @@
                 <input type="hidden" name="PASSWORD" value="###PASSWORD_VAL###" />
             </div>
 	          <br />
+
+            <!--ADMIN-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -108,16 +121,18 @@
                 <div class="col-md-10 col-xs-11">
 	                <span class="text-info h3">###ADMIN###</span>
                 </div>
-                <input type="hidden" name="ADMIN_VAL" value="###ADMIN_VAL###" />
+                <input type="hidden" name="ADMIN" value="###ADMIN_VAL###" />
             </div>
 	          <br />
+
+            <!--COMPLETE BUTTON-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
 	                    <button type="submit" class="btn btn-primary btn-md" />
-	                        <span class="glyphicon glyphicon-plus">OK</span>
+	                        <span class="glyphicon glyphicon-plus">COMPLETE</span>
                         </button>
                     </div>
                 </div>
