--- a/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
@@ -23,7 +23,8 @@
         <form action="/APP/STUFF/NEW" method="POST">
 	          <input type="hidden" name="ACTION" value="COMPLETE" />
 	          <input type="hidden" name="REST" value="POST" />
-              <!---->
+            
+            <!--FAMILY_NAME-->
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -37,6 +38,8 @@
 	              <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME###" />
             </div>
 	          <br />
+
+            <!--GIVEN_NAME-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -48,6 +51,8 @@
                 </div>
                 <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME###" />
             </div>
+
+            <!--EMAIL-->
 	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
@@ -60,6 +65,8 @@
                 </div>
                 <input type="hidden" name="EMAIL" value="###EMAIL###" />
             </div>
+
+            <!--TEL1-->
 	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
@@ -73,6 +80,8 @@
                 <input type="hidden" name="TEL1" value="###TEL1###" />
             </div>
 	          <br />
+
+            <!--TEL2-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -84,6 +93,8 @@
                 </div>
                 <input type="hidden" name="TEL2" value="###TEL2###" />
             </div>
+
+            <!--PASSWORD-->
 	          <br />
             <div class="row">
                 <div class="col-md-1 hidden-xs">
@@ -97,6 +108,8 @@
                 <input type="hidden" name="PASSWORD" value="###PASSWORD_VAL###" />
             </div>
 	          <br />
+
+            <!--ADMIN-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -109,13 +122,15 @@
                 <input type="hidden" name="ADMIN" value="###ADMIN_VAL###" />
             </div>
 	          <br />
+
+            <!--COMPLETE BUTTON-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
 	                    <button type="submit" class="btn btn-primary btn-md" />
-	                        <span class="glyphicon glyphicon-plus">OK</span>
+	                        <span class="glyphicon glyphicon-plus">COMPLETE</span>
                         </button>
                     </div>
                 </div>
