--- a/APPLI/STUFF/NEW/HTML/INPUT.HTML
+++ b/APPLI/STUFF/NEW/HTML/INPUT.HTML
@@ -12,7 +12,7 @@
             </label>
         </div>
         <div class="col-md-10 lbl-header-info">
-		        <span class="label label-default ###INFO_TOP_MSG###">Please input berow objects.</span>
+		        <span class="label label-default ###INFO_TOP_MSG###">項目に入力してください。</span>
         </div>
         <!--ERROR MESSAGE-->
         <div class="col-md-10 lbl-header-info">
