--- a/APPLI/STUFF/EDIT/HTML/INPUT.HTML
+++ b/APPLI/STUFF/EDIT/HTML/INPUT.HTML
@@ -11,156 +11,193 @@
                     <i class="glyphicon glyphicon-info-sign"></i>
                 </label>
             </div>
-            <div class="col-md-10 lbl-header-info">
-                <span class="label label-danger ###FAMILY_NAME_ERR###">FAMILY NAME was Invalid.</span>
-                <span class="label label-danger ###GIVEN_NAME_ERR###">GIVEN NAME was Invalid.</span>
-                <span class="label label-danger ###EMAIL_ERR###">EMAIL was Invalid.</span>
-                <span class="label label-danger ###EMAIL_DUPLECATED###">Duplicated EMAIL.</span>
-                <span class="label label-danger ###TEL1_ERR###">Tel1 Invailed.</span>
-                <span class="label label-danger ###TEL2_ERR###">Tel2 Invalid.</span>
-                <span class="label label-danger ###PASSWORD_ERR###">PASSWORD was Invalid.</span>
-                <span class="label label-danger ###PW_CONFIRM_ERR###">PASSWORD CONFIRMATION was Invalid.</span>
+        </div>
+        <div class="col-md-10 lbl-header-info">
+		        <span class="label label-default ###INFO_TOP_MSG###">項目に入力してください。</span>
+        </div>
+        <!--ERROR MESSAGE-->
+        <div class="col-md-10 lbl-header-info">
+            <span class="label label-danger ###FAMILY_NAME_ISNULL###">FAMILY NAMEに値がありません。 </span>
+            <span class="label label-danger ###FAMILY_NAME_LENGTH###">FAMILY NAMEは2文字以上必要です。 </span>
+            <span class="label label-danger ###GIVEN_NAME_ISNULL###">GIVEN NAMEに値がありません。</span>
+            <span class="label label-danger ###GIVEN_NAME_LENGTH###">GIVEN NAMEは2文字以上必要です。 </span>
+            <span class="label label-danger ###EMAIL_ISNULL###">EMAILに値がありません。</span>
+            <span class="label label-danger ###EMAIL_DUPLICATE###">EMAILが既に使用されています。</span>
+            <span class="label label-danger ###TEL1_ISNULL###">Tel1に値がありません。</span>
+            <span class="label label-danger ###TEL1_MATCH###">Tel1はハイフン付きで入力してください。</span>
+            <span class="label label-danger ###TEL1_NUMERIC###">Tel1にハイフンと数字以外が入力されています。</span>
+            <span class="label label-danger ###TEL2_MATCH###">Tel2はハイフン付きで入力してください。</span>
+            <span class="label label-danger ###TEL2_NUMERIC###">Tel2にハイフンと数字以外が入力されています。</span>
+            <span class="label label-danger ###PASSWORD_ISNULL###">PASSWORDに値がありません。</span>
+            <span class="label label-danger ###PASSWORD_LENGTH###">PASSWORDは8文字以上必要です。</span>
+            <span class="label label-danger ###PW_CONFIRM_ISNULL###">PW CONFIRMATIONに値がありません。</span>
+            <span class="label label-danger ###PW_CONFIRM_COMPARE###">PW CONFIRMATIONの値がPASSWORDと異なっています。</span>
+        </div>
+    </div>
+    <br> 
+
+
+        <!--INPUT-->
+    <form action="/APP/STUFF/EDIT" method="POST">
+	      <input type="hidden" name="ACTION" value="CONFIRM" />
+	    	<input type="hidden" name="REST" value="PUT" />
+	    	<input type="hidden" name="ENC_ID" value="###ENC_ID###" />
+            
+        <!--FAMILY_NAME-->
+        <div class="row">
+           <div class="col-md-1 hidden-xs">
+                <label class="control-label ###FAMILY_NAME_ISNULL_LBL### ###FAMILY_NAME_LENGTH_LBL###">
+                    <i class="glyphicon glyphicon-user" style=""></i>
+                </label>
             </div>
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+	                <input type="text" name="FAMILY_NAME" value="###FAMILY_NAME###" 
+                        class="form-control ###FAMILY_NAME_ISNULL_LBL### ###FAMILY_NAME_LENGTH_LBL###" 
+                        placeholder="Family Name" />
+                </div>
+            </div>
+            <div class="col-md-1 col-xs-1"></div>
         </div>
         <br> 
 
-        <!--INPUT-->
-        <form action="/APP/STUFF/EDIT" method="POST">
-	    	    <input type="hidden" name="ACTION" value="CONFIRM" />
-	    	    <input type="hidden" name="REST" value="PUT" />
-	    	    <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
-            
-            <div class="row">
-               <div class="col-md-1 hidden-xs">
-                    <label class="control-label ###FAMILY_NAME_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-user" style=""></i>
-                    </label>
-                </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-	                    <input type="text" name="FAMILY_NAME" value="###FAMILY_NAME###" class="form-control" placeholder="Family Name" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
+        <!--GIVEN_NAME-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label ###GIVEN_NAME_ISNULL_LBL### ###GIVEN_NAME_LENGTH_LBL###">
+                    <i class="glyphicon glyphicon-user"></i>
+                </label>
             </div>
-            <br> 
-
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                    <label class="control-label ###GIVEN_NAME_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-user"></i>
-                    </label>
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+	                <input type="text" name="GIVEN_NAME" value="###GIVEN_NAME###" 
+                        class="form-control ###GIVEN_NAME_ISNULL_LBL### ###GIVEN_NAME_LENGTH_LBL###" 
+                        placeholder="Given Name" />
                 </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-	                    <input type="text" name="GIVEN_NAME" value="###GIVEN_NAME###" class="form-control" placeholder="Given Name" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
             </div>
-            <br> 
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
 
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                    <label class="control-label ###EMAIL_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-envelope"></i>
-                    </label>
-                </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-                        <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL###" class="form-control" placeholder="ID (e-mail)" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
+        <!--EMAIL-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label ###EMAIL_ISNULL_LBL### ###EMAIL_DUPLICATE_LBL###">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
             </div>
-            <br> 
-
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                    <label class="control-label ###TEL1_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-envelope"></i>
-                    </label>
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+                    <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL###" 
+                          class="form-control ###EMAIL_ISNULL_LBL### ###EMAIL_DUPLICATE_LBL###" 
+                          placeholder="ID (e-mail)" />
                 </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-                        <input type="text" name="TEL1" id="TEL1" value="###TEL1###" class="form-control" placeholder="mobile phone" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
             </div>
-            <br> 
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
 
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                    <label class="control-label ###TEL2_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-envelope"></i>
-                    </label>
-                </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-                        <input type="text" name="TEL2" id="TEL2" value="###TEL2###" class="form-control" placeholder="another phone" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
+        <!--TEL1-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label ###TEL1_ISNULL_LBL### ###TEL1_MATCH_LBL### ###TEL1_NUMERIC_LBL###">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
             </div>
-            <br> 
-
-            <div class="row">
-                <div class="col-md-1 hidden-xs ">
-                    <label class="control-label ###PW_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-edit"></i>
-                    </label>
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+                    <input type="text" name="TEL1" id="TEL1" value="###TEL1###" 
+                          class="form-control ###TEL1_ISNULL_LBL### ###TEL1_MATCH_LBL### ###TEL1_NUMERIC_LBL###" 
+                          placeholder="mobile phone" />
                 </div>
-                <div class="col-md-10 col-xs-11 ">
-                    <div class="form-group">
-                        <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD###" class="form-control" placeholder="Password" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
             </div>
-            <br> 
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
 
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                    <label class="control-label ###PW_CONF_LBL_COLOR###">
-                        <i class="glyphicon glyphicon-thumbs-up"></i>
-                    </label>
-                </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-                        <input type="password" name="PW_CONFIRM" id="PW_CONFIRM" value="###PW_CONFIRM###" class="form-control" placeholder="Password Confirmation" />
-                    </div>
-                </div>
-                <div class="col-md-1 col-xs-1"></div>
+        <!--TEL2-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label ###TEL2_MATCH_LBL### ###TEL2_NUMERIC_LBL###">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
             </div>
-            <br> 
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+                    <input type="text" name="TEL2" id="TEL2" value="###TEL2###" 
+                          class="form-control ###TEL2_MATCH_LBL### ###TEL2_NUMERIC_LBL###" 
+                          placeholder="another phone" />
+                </div>
+            </div>
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
 
-            <div class="row">
-                 <div class="col-md-1 hidden-xs">
-                     <label class="control-label">
-                         <i class="glyphicon glyphicon-envelope"></i>
-                     </label>
+        <!--PASSWORD-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs ">
+                <label class="control-label ###PASSWORD_ISNULL_LBL### ###PASSWORD_LENGTH_LBL###">
+                    <i class="glyphicon glyphicon-edit"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11 ">
+                <div class="form-group">
+                    <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD###" 
+                          class="form-control ###PASSWORD_ISNULL_LBL### ###PASSWORD_LENGTH_LBL###" 
+                          placeholder="Password" />
+                </div>
+            </div>
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
+
+        <!--PASSWORD CONFIRMATION-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label ###PW_CONFIRM_ISNULL_LBL### ###PW_CONFIRM_COMPARE_LBL###">
+                    <i class="glyphicon glyphicon-thumbs-up"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+                    <input type="password" name="PW_CONFIRM" id="PW_CONFIRM" value="###PW_CONFIRM###" 
+                          class="form-control ###PW_CONFIRM_ISNULL_LBL### ###PW_CONFIRM_COMPARE_LBL###" 
+                          placeholder="Password Confirmation" />
+                </div>
+            </div>
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
+
+        <!--ADMIN CHECK-->
+        <div class="row">
+             <div class="col-md-1 hidden-xs">
+                 <label class="control-label">
+                     <i class="glyphicon glyphicon-envelope"></i>
+                 </label>
+             </div>
+             <div class="col-md-10 col-xs-11">
+                 <div class="form-group">
+                     <input type="checkbox" checked="###ADMIN_CHK###" name="ADMIN" id="ADMIN" value="###ADMIN_VAL###" 
+                            class="form-control" placeholder="管理権限" />
                  </div>
-                 <div class="col-md-10 col-xs-11">
-                     <div class="form-group">
-                         <input type="checkbox" checked="###ADMIN_CHK###" name="ADMIN" id="ADMIN" value="###ADMIN_VAL###" class="form-control" placeholder="管理権限" />
-                     </div>
-                 </div>
-                 <div class="col-md-1 col-xs-1"></div>
-            </div>
-            <br> 
+             </div>
+             <div class="col-md-1 col-xs-1"></div>
+        </div>
+        <br> 
 
-            <div class="row">
-                <div class="col-md-1 hidden-xs">
-                </div>
-                <div class="col-md-10 col-xs-11">
-                    <div class="form-group">
-	                    <button type="submit" class="btn btn-primary btn-md" />
-                            <span class="glyphicon glyphicon-eye-open">CONFIRM</span>
-                        </button>
-                    </div>
+        <!--CONFIRM BUTTON-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+            </div>
+            <div class="col-md-10 col-xs-11">
+                <div class="form-group">
+	                <button type="submit" class="btn btn-primary btn-md" />
+                        <span class="glyphicon glyphicon-eye-open">CONFIRM</span>
+                    </button>
                 </div>
             </div>
+        </div>
 
 	    </form>
     </div>
