--- a/HTML/HEAD.HTML
+++ b/HTML/HEAD.HTML
@@ -29,4 +29,5 @@
     <!-- CSS読み込み -->
     <link href="/LAYOUT/CSS/common.css" rel="stylesheet">
  
+		<script src="/JS/validation_disp.js"></script>
 </head>
