OPERATION_CATEGORY Validation common

--- a/APPLI/OPERATION_CATEGORY/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_CATEGORY/LISTS/HTML/RECORDS.HTML
@@ -7,10 +7,25 @@
             <span class="label label-default">%2</span>
         </td>
         <td>
-            <input type="text" name="OPERATION_CATEGORY_NAME_%2" id="OPERATION_CATEGORY_NAME_%2" value="%3" class="form-control" />
+            <input type="text" 
+                    name="OPERATION_CATEGORY_NM_EN_%2" 
+                    id="OPERATION_CATEGORY_NM_EN_%2" value="%3" 
+                    class="form-control 
+                            ###OPERATION_CATEGORY_NM_EN_ISNULL_LBL_%2### 
+                            ###OPERATION_CATEGORY_NM_EN_DUPLICATE_LBL_%2### " 
+                    placeholder="作業カテゴリ名(英語)" />
         </td>
         <td>
-            <a href="" class="btn btn-warning" id="OPERATION_CATEGORY_EDIT_%2" onclick="editOperationCategory(%2); return false;" >EDIT</a>
+            <input type="text" 
+                    name="OPERATION_CATEGORY_NM_JP_%2" 
+                    id="OPERATION_CATEGORY_NM_JP_%2" value="%4" 
+                    class="form-control 
+                            ###OPERATION_CATEGORY_NM_JP_ISNULL_LBL_%2### 
+                            ###OPERATION_CATEGORY_NM_JP_DUPLICATE_LBL_%2### " 
+                    placeholder="作業カテゴリ名(日本語)">
+        </td>
+        <td>
+            <a class="btn btn-warning" id="OPERATION_CATEGORY_EDIT_%2" onclick="editOperationCategory(%2); return false;" >EDIT</a>
         </td>
         <td>
             <a class="btn btn-danger" id="OPERATION_CATEGORY_DELETE_%2" onclick="deleteOperationCategory(%2);" >DELETE</a>
