--- a/APPLI/OPERATION_CATEGORY/LISTS/HTML/TABLE.HTML
+++ b/APPLI/OPERATION_CATEGORY/LISTS/HTML/TABLE.HTML
@@ -3,22 +3,26 @@
         <tr>
             <th>#</th>
             <th>CATEGORY NO</th>
-            <th>CATEGORY NAME</th>
+            <th>CATEGORY NAME(EN)</th>
+            <th>CATEGORY NAME(JP)</th>
             <th></th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>--</td>
+            <td>-</td>
             <td>
                 <span class="label label-default">NEW</span>
             </td>
             <td>
-                <input type="text" id="NEW_OPERATION_CATEGORY_NAME" name="NEW_OPERATION_CATEGORY_NAME" value="" class="form-control" style="" placeholder="Operation category name" >
+                <input type="text" id="OPERATION_CATEGORY_NM_EN_NEW" name="OPERATION_CATEGORY_NM_EN_NEW" value="" class="form-control ###OPERATION_CATEGORY_NM_EN_ISNULL_LBL### ###OPERATION_CATEGORY_NM_EN_DUPLICATE_LBL###" style="" placeholder="作業カテゴリ名(英語)" >
             </td>
             <td>
-                <a href="" class="btn btn-primary" onclick="newOperationCategory(); return false;">NEW</a>
+                <input type="text" id="OPERATION_CATEGORY_NM_JP_NEW" name="OPERATION_CATEGORY_NM_JP_NEW" value="" class="form-control ###OPERATION_CATEGORY_NM_JP_ISNULL_LBL### ###OPERATION_CATEGORY_NM_JP_DUPLICATE_LBL###" style="" placeholder="作業カテゴリ名(日本語)" >
+            </td>
+            <td>
+                <a class="btn btn-primary" onclick="newOperationCategory(); return false;">NEW</a>
             </td>
         </tr>
         ###TABLE_RECORDS###
