--- a/APPLI/OPERATION_CATEGORY/LISTS/HTML/TABLE.HTML
+++ b/APPLI/OPERATION_CATEGORY/LISTS/HTML/TABLE.HTML
@@ -16,10 +16,18 @@
                 <span class="label label-default">NEW</span>
             </td>
             <td>
-                <input type="text" id="OPERATION_CATEGORY_NM_EN_NEW" name="OPERATION_CATEGORY_NM_EN_NEW" value="" class="form-control ###OPERATION_CATEGORY_NM_EN_ISNULL_LBL### ###OPERATION_CATEGORY_NM_EN_DUPLICATE_LBL###" style="" placeholder="作業カテゴリ名(英語)" >
+                <input type="text" 
+                        id="OPERATION_CATEGORY_NM_EN_NEW" 
+                        name="OPERATION_CATEGORY_NM_EN_NEW" value="" 
+                        class="form-control" 
+                        placeholder="作業カテゴリ名(英語)" >
             </td>
             <td>
-                <input type="text" id="OPERATION_CATEGORY_NM_JP_NEW" name="OPERATION_CATEGORY_NM_JP_NEW" value="" class="form-control ###OPERATION_CATEGORY_NM_JP_ISNULL_LBL### ###OPERATION_CATEGORY_NM_JP_DUPLICATE_LBL###" style="" placeholder="作業カテゴリ名(日本語)" >
+                <input type="text" 
+                        id="OPERATION_CATEGORY_NM_JP_NEW" 
+                        name="OPERATION_CATEGORY_NM_JP_NEW" value="" 
+                        class="form-control" 
+                        placeholder="作業カテゴリ名(日本語)" />
             </td>
             <td>
                 <a class="btn btn-primary" onclick="newOperationCategory(); return false;">NEW</a>
