--- a/APPLI/OPERATION_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/TABLE.HTML
@@ -8,10 +8,9 @@
             <th>#</th>
             <th>NO</th>
             <th>OPERATION CATEGORY</th>
-            <th>OPERATION NAME (EN)</th>
-            <th>OPERATION NAME (JP)</th>
+            <th>OPERATION NAME</th>
             <th>PRICE</th>
-            <th>REMARKS</th>
+            <th></th>
             <th></th>
             <th></th>
         </tr>
@@ -19,10 +18,13 @@
     <tbody>
         <!--作業新規追加-->
         <tr>
-            <td>--</td>
+            <!--順-->
+            <td>-</td>
+            <!--ID-->
             <td>
                 <span class="label label-default">NEW</span>
             </td>
+            <!--カテゴリ-->
             <td>
                 <div class="form-group">
                     <div class="btn-group">
@@ -35,25 +37,22 @@
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
+                            <input type="text" id="CATEGORY_NM_NEW" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
                         </div>
                     </div>
                     <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" class="form-control" />
                     <input type="hidden" name="CATEGORY_NO_HID_NEW" id="CATEGORY_NO_HID_NEW" value="" class="form-control" />
                 </div>
             </td>
+            <!--作業名-->
             <td>
-                <input type="text" id="NEW_OPERATION_NAME" name="NEW_OPERATION_NAME" value="" class="form-control input-sm" style="" placeholder="作業名-英数字(正)" >
+                <input type="text" id="OPERATION_NAME_NEW" name="OPERATION_NAME_NEW" value="" class="form-control input-sm" style="" placeholder="作業名(正)" >
             </td>
+            <!--金額-->
             <td>
-                <input type="text" id="NEW_OPERATION_NAME_JP" name="NEW_OPERATION_NAME_JP" value="" class="form-control input-sm" style="" placeholder="作業名-日本語(略)" >
+                <input type="number" id="OPERATION_PRICE_NEW" name="OPERATION_PRICE_NEW" value="" class="form-control input-sm" style="" placeholder="工賃(税抜)" >
             </td>
-            <td>
-                <input type="number" id="NEW_OPERATION_PRICE" name="NEW_OPERATION_PRICE" value="" class="form-control input-sm" style="" placeholder="税抜価格" >
-            </td>
-             <td>
-                <input type="text" id="NEW_OPERATION_REMARKS" name="NEW_OPERATION_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
-            </td>           
+            <!--ボタン-->
             <td>
                 <a class="btn btn-primary btn-sm" onclick="newOperation(); return false;">NEW</a>
             </td>
